--- a/chromoji/manifest.json
+++ b/chromoji/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 2,
   "name": "Chromoji - Emojis for Google Chrome",
   "description": "Display emojis in Chrome",
-  "version": "1.0.13",
+  "version": "1.0.15",
   "icons": {
     "16": "data/images/icon-16.png",
     "48": "data/images/icon-48.png",
@@ -15,7 +15,9 @@
         "http://*/*",
         "https://*/*"
       ],
-      "css": ["data/style/content.css"],
+      "css": [
+        "data/style/content.css"
+      ],
       "js": [
         "data/script/jquery.js",
         "data/script/emoji.min.js",
